# comics_tagger

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  compile_commands.json  contributing.md  otto.sh  todo.md
.template_files/mock_module/: CMakeLists.txt  module_name.c  module_name.h
.template_files/modules/: CMakeLists.txt  TestCMakeLists.txt  module_name.c
.template_files/test_module/: CMakeLists.txt  test_module_name.cpp
src/: CMakeLists.txt  main.cpp
src/cbz/: CMakeLists.txt  cbz.c  cbz.h
src/cvectors/: CMakeLists.txt  cvectors.c  cvectors.h
src/mem/: CMakeLists.txt  mem.c  mem.h
src/result_returns/: CMakeLists.txt  result_returns.c  result_returns.h
tests/: AllTests.cpp  CMakeLists.txt
tests/cbz/: CMakeLists.txt  test_cbz.cpp
tests/cvectors/: CMakeLists.txt  test_cvectors.cpp
tests/result_returns/: CMakeLists.txt  test_result_returns.cpp
tests/shared/: CMakeLists.txt
tests/shared/mocks/: CMakeLists.txt
tests/shared/mocks/MockADC/: CMakeLists.txt  MockADC.c  MockADC.h
tests/shared/mocks/MockRegEdit/: CMakeLists.txt  MockRegEdit.c  MockRegEdit.h  u8_comparator.cpp  u8_comparator.hpp
tests/shared/mocks/TimerMock/: CMakeLists.txt  TimerMock.c  TimerMock.h
tests/simple_test/: CMakeLists.txt
